--- a/scss/prueba.scss
+++ b/scss/prueba.scss
@@ -56,6 +56,14 @@ ul {
     margin-bottom: 10px;
 }
 
+.logoMt{
+
+
+    height: 20px;
+    width: 3vw;
+
+}
+
 .carrouselSections {
     h5 {
         p {
